refactor(消息管理): 修改消息管理执行逻辑